# practise

clang/cairo/: 使用cairo绘制图形的部分函数总结.md
clang/cairo/hello/: hello.c  makefile
clang/cairo/taichi/: makefile  taichi.c
clang/http_epoll/: .syntastic_c_config  demo.c  linux 高并发事件触发处理 — epoll.md  makefile  ucontext-人人都可以实现的简单协程库.md  ucontext_test.c
go/create_rsa/: .gitignore  go.mod  rsa.go  rsa_test.go
go/example/: uint32_to_bytes.go
go/shadowsocks/: .gitignore  README.md  example.toml  go.mod  go.sum  main.go  makefile
go/shadowsocks/client/: baseclient.go  baseproxy.go  client.go  clientbase.go  clientrelay.go  clientshadow.go  clientshadow2.go  clientsocks.go  config.go  noproxy.go  proxybase.go  proxylocal.go  proxynative.go  proxyshadow.go  proxyshadow2.go  proxysocks.go  proxyssh.go  relayclient.go  server.go  shadowclient.go  shadowproxy.go  socksclient.go  socksproxy.go  user_linux.go  user_others.go
go/shadowsocks/server/: server.go
go/shadowsocks/shadow/: cipher.go  doc.go  (+2 more)
js/my-svelte-app/: index.html  package-lock.json  package.json  pm2.config.js  server.js  vite.config.js
js/my-vue-app/: package-lock.json  package.json  server.js  vite.config.js
mcu/digital-amplifier/: tas5805m_pbtl_v1.7z
mcu/oven_circuit/: max38165_1.sch  test-cache.lib  test-rescue.lib  test.kicad_pcb  test.sch
mcu/oven_stm32f103c8t6/: .syntastic_c_config  Makefile  readme.md
mcu/stm32f446-usbaudio-test/: Makefile
mcu/stm32f446-usbaudio-test2/: Makefile
rust/btree-kv/: .gitignore  Cargo.toml
rust/btree-kv/src/: lib.rs
rust/btree-kv/tests/: btree-kv.rs
(+486 files in other folders)
