[package]
name = "btree-kv"
version = "0.1.0"
authors = ["bybzmt <other@bybzmt.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
libc = "0.2.67"
fnv = "1.0.3"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
